--- a/src/App.css
+++ b/src/App.css
@@ -7807,6 +7807,7 @@ textarea.form-control-lg {
 
 .bg-luizweb{
   background-color: #457b9d !important;
+  /* background-color: #303030 !important; */
 }
 
 .bg-primary {
