--- a/src/App.css
+++ b/src/App.css
@@ -4479,10 +4479,10 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.75);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 1);
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
@@ -7806,8 +7806,9 @@ textarea.form-control-lg {
 }
 
 .bg-luizweb{
-  background-color: #457b9d !important;
+  /* background-color: #457b9d !important; */
   /* background-color: #303030 !important; */
+  background-color: #0f3c4c !important;
 }
 
 .bg-primary {
